2003-08-17  Bruno Haible  <bruno@clisp.org>

	* gnulib-tool (func_create_testdir): Handle gl_USE_SYSTEM_EXTENSIONS
	like AC_GNU_SOURCE.
	* modules/extensions (configure.ac): Comment out the invocation of
	gl_USE_SYSTEM_EXTENSIONS.

2003-08-17  Bruno Haible  <bruno@clisp.org>

	* modules/euidaccess (Files): Add lib/euidaccess.h.

2003-08-16  Paul Eggert  <eggert@twinsun.com>

	Document merge from coreutils.
	* modules/alloca: Append $(ALLOCA_H) to BUILT_SOURCES.
	* modules/fnmatch: Append $(FNMATCH_H) to BUILT_SOURCES.
	* modules/utime: Add m4/utimes-null.m4.

2003-08-15  Paul Eggert  <eggert@twinsun.com>

	Document merge from coreutils.
	* modules/userspec: Depend on posixver.
	* modules/strftime: Depend on tzset.

2003-08-14  Jim Meyering  <jim@meyering.net>

	Merges from coreutils.
	* modules/fnmatch: Use the `$(FNMATCH_H)' notation for AC_REPLACED
	variable names, rather than @FNMATCH_H@.
	* modules/alloca: Likewise for $(ALLOCA_H).

	* modules/fnmatch (fnmatch.h): Use `$@' in the commands, in place of
	the three copies of the literal target, `fnmatch.h'.
	* modules/alloca (alloca.h): Likewise.

2003-08-14  Paul Eggert  <eggert@twinsun.com>

	* modules/tzset: New file.

2003-08-12  Paul Eggert  <eggert@twinsun.com>

	Merge from coreutils.
	* modules/euidaccess: Add lib_SOURCES, include for new
	file euidaccess.h

2003-08-11  Paul Eggert  <eggert@twinsun.com>

	* modules/gnu-source, m4/gnu-source.m4:
	Remove; we're assuming Autoconf 2.54 or later now.
	Suggested by Bruno Haible.
	* MODULES.html.sh (func_all_modules): Remove gnu-source.

2003-08-08  Paul Eggert  <eggert@twinsun.com>

	* MODULES.html.sh (func_all_modules): Add extensions, gnu-source.
	* modules/extensions, modules/gnu-source: New files.
	* modules/timespec, modules/unlocked-io: Depend on extensions.

2003-08-07 Paul Eggert  <eggert@twinsun.com>

	* modules/restrict: New file.
	* MODULES.html.sh (func_all_modules): Add restrict.
	* modules/regex: Depend on restrict.
