@@ -1,3 +1,13 @@
+2003-08-17  Simon Josefsson  <jas@extundo.com>
+            Bruno Haible  <bruno@clisp.org>
+
+	* xstrndup.h: New file.
+	* xstrndup.c: New file.
+
+2003-08-17  Bruno Haible  <bruno@clisp.org>
+
+	* strndup.h: New file.
+
 2003-08-16  Paul Eggert  <eggert@twinsun.com>
 
 	* regex.h, strdup.c, strtoll.c, strtoul.c: Do not normalize white
