@@ -1,3 +1,7 @@
+2003-08-17  Simon Josefsson  <jas@extundo.com>
+
+	* xstrndup.m4: New file.
+
 2003-08-16  Jim Meyering  <jim@meyering.net>
 
 	* utimes.m4 (gl_FUNC_UTIMES): New file.
